--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 awswrangler==3.7.3
 boto3==1.34.94
 botocore==1.34.94
+duckdb==0.10.2
+duckdb_engine==0.12.0
+fastavro==1.9.7
 jmespath==1.0.1
 numpy==1.26.4
 packaging==24.0
@@ -10,6 +13,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 s3transfer==0.10.1
 six==1.16.0
+SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
